Added images and small styling

--- a/ShoppingLista.csproj
+++ b/ShoppingLista.csproj
@@ -57,6 +57,14 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <None Remove="Images\kundkorgbla.jpg" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <MauiImage Include="Images\kundkorgbla.jpg" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<PackageReference Include="CommunityToolkit.Maui" Version="9.1.1" />
 		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.3.2" />
 		<PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
